# netapp-minimal-repro

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs
