[package]
name = "netapp-minimal-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-credential-types = "0.56.1"
aws-sdk-s3 = { version = "0.33.0" }
clap = { version = "4.4.6", features = ["derive", "env"] }
http = "0.2.9"
tokio = { version = "1.33.0", features = ["macros", "rt"] }
url = { version = "2.4.1" }
uuid = { version = "1.4.1", features = ["v4"] }
